--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+
+# Build outputs
+_dist/
+dist/
+client/dist/
+dist/public/
+build/
+
+# Temp/cache
+.vite/
+.cache/
+.tmp/
+.temp/
+.eslintcache
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+
+# Env
+.env
+.env.*
+
+# Netlify local state
+.netlify/
+
+# Tests/coverage
+coverage/
